--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,11 @@ boby {
     font-family: sans-serif;
     position: relative;
 }
+
+header {
+    background-color: var(--primary-color);
+    height: 70px;
+    text-align: center;
+    line-height: 70px;
+    box-shadow: 0 1px 2px var(--shadow-color);
+}
