--- a/css/main.css
+++ b/css/main.css
@@ -31,3 +31,15 @@ header {
     color: #000000;
     font-size: 2rem;
 }
+
+main {
+    align-items: flex-start;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    width: 90%;
+    margin: 5vh auto;
+    padding: 50px;
+    box-shadow: 2px 2px 10px var(--shadow-color);
+    gap: 20px;
+}
