--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,11 @@ main {
     box-shadow: 2px 2px 10px var(--shadow-color);
     gap: 20px;
 }
+
+footer {
+    width: 100;
+    text-align: center;
+    font-weight: 200;
+    font-style: italic;
+    padding: 20px;
+}
