--- a/css/button.css
+++ b/css/button.css
@@ -8,3 +8,19 @@
     cursor: pointer;
     transition: box-shadow .6s ease;
 }
+
+.button.blue {
+    background-color: #1FB6FF;
+}
+
+button.green {
+    background-color: #13CE66;
+}
+
+button.red {
+    background-color: #FF4949;
+}
+
+.button:hover {
+    box-shadow: inset 200px 0 0 #000000;
+}
