--- a/css/tela.css
+++ b/css/tela.css
@@ -24,3 +24,12 @@
     background-color: #ffffff;
     box-shadow: 1px 1px 10px #000000;
 }
+
+.tela-header {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    height: 40px;
+    line-height: 40px;
+    font-size: 1rem;
+}
