--- a/css/tela.css
+++ b/css/tela.css
@@ -33,3 +33,14 @@
     line-height: 40px;
     font-size: 1rem;
 }
+
+.tela-close {
+    position: absolute;
+    right: 0;
+    display: block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    user-select: none;
+    cursor: pointer;
+}
