estilizando class tela-form

--- a/css/tela.css
+++ b/css/tela.css
@@ -49,3 +49,11 @@
     background-color: #FF4949;
     color: #fff;
 }
+
+.tela-form {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 0 20px;
+}
