--- a/css/tela.css
+++ b/css/tela.css
@@ -57,3 +57,13 @@
     gap: 20px;
     padding: 0 20px;
 }
+
+.tela-campo {
+    width: calc(50% - 10px);
+    height: 40px;
+    outline-style: none;
+    border-style: none;
+    box-shadow: 0 0 2px #000000;
+    padding: 0 10px;
+    font-size: 1rem;
+}
