estilizando class tela-footer

--- a/css/tela.css
+++ b/css/tela.css
@@ -72,3 +72,9 @@
     border: 2px solid var(--primary-color);
     box-shadow: 0 0 3 var(--primary-color);
 }
+
+.tela-footer {
+    background-color: inherit;
+    text-align: right;
+    padding: 0 20px;
+}
