--- a/css/button.css
+++ b/css/button.css
@@ -24,3 +24,23 @@ button.red {
 .button:hover {
     box-shadow: inset 200px 0 0 #00000055;
 }
+
+@media(max-width: 480px) {
+    .button.mobile {
+        color: transparent;
+        font-size: 0;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        position: fixed;
+        top: 90vh;
+        left: 80vw;
+    }
+    .button.mobile::before {
+        content: "+";
+        color: #000000;
+        font-size: 2rem;
+        width: 100%;
+        height: 100%;
+    }
+}
