--- a/css/main.css
+++ b/css/main.css
@@ -51,3 +51,19 @@ footer {
     text-align: center;
     width: 100;
 }
+
+@media(max-width: 480px) {
+    header {
+        position: fixed;
+        width: 100%;
+    }
+    .header-title {
+        font-size: 1.5rem;
+    }
+    main {
+        padding: 0;
+        margin: 20px 0 0 0;
+        width: 100%;
+        box-shadow: none;
+    }
+}
