--- a/css/tela.css
+++ b/css/tela.css
@@ -1,11 +1,11 @@
 .tela {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     background: #00000090;
+    left: 0;
+    height: 100%;
+    position: fixed;
     opacity: 0;
+    top: 0;
+    width: 100%;
     z-index: -1;
 }
 
@@ -15,34 +15,34 @@
 }
 
 .tela-conteudo {
+    background-color: #ffffff;
+    box-shadow: 1px 1px 10px #000000;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 50vw;
     margin: 15vh auto;
     padding-bottom: 20px;
-    background-color: #ffffff;
-    box-shadow: 1px 1px 10px #000000;
+    width: 50vw;
 }
 
 .tela-header {
     display: flex;
-    position: relative;
+    font-size: 1rem;
     justify-content: center;
     height: 40px;
     line-height: 40px;
-    font-size: 1rem;
+    position: relative;
 }
 
 .tela-close {
+    cursor: pointer;
+    display: block;
+    height: 40px;
     position: absolute;
     right: 0;
-    display: block;
-    width: 40px;
-    height: 40px;
     text-align: center;
     user-select: none;
-    cursor: pointer;
+    width: 40px;
 }
 
 .tela-close:hover {
@@ -52,20 +52,20 @@
 
 .tela-form {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: space-between;
     padding: 0 20px;
 }
 
 .tela-campo {
-    width: calc(50% - 10px);
-    height: 40px;
-    outline-style: none;
     border-style: none;
     box-shadow: 0 0 2px #000000;
-    padding: 0 10px;
     font-size: 1rem;
+    height: 40px;
+    outline-style: none;
+    padding: 0 10px;
+    width: calc(50% - 10px);
 }
 
 .tela-campo:focus {
@@ -75,6 +75,24 @@
 
 .tela-footer {
     background-color: inherit;
-    text-align: right;
     padding: 0 20px;
+    text-align: right;
+}
+
+@media (max-width:480px){
+    .tela{
+        top:100%;
+        transition: all 1s ease;
+    }
+    .tela.active{
+        top:0;
+    }
+    .tela-conteudo{
+        margin:0;
+        width:100%;
+        position:fixed;
+    }
+    .tela-campo{
+        width:100%;
+    }
 }
