--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LocaMAX Dashboard</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="scripts/script.js"></script>
 </head>
 <body>
-    <h1>HELLO WORLD!</h1>
+    <header>
+        <h2>LocaMAX</h2>
+    </header>
+    <div class="container">
+    </div>
+    <footer>
+        <p>Copyright © 2022 <a href="https://github.com/matheuspl92" target="_blank">matheuspl92</a></p>
+    </footer>
 </body>
 </html>
