Create frontend data manipulation methods

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,10 @@
         <h2>LocaMAX</h2>
     </header>
     <div class="container">
+        <button id="GET">GET ALL</button>
+        <button id="POST">POST</button>
+        <button id="PUT">PUT</button>
+        <button id="DELETE">DELETE</button>
     </div>
     <footer>
         <p>Copyright © 2022 <a href="https://github.com/matheuspl92" target="_blank">matheuspl92</a></p>
