Add edit function and more styling

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
           <form class="vehicle-form" onsubmit="return false">
             <div class="modal-header">
               <a class="close">&times;</a>
-              <h3>Informações do veículo</h2>
+              <h3 id="header-info">Informações do veículo</h2>
             </div>
             <input id="vehicle-model" type="text" name="model" placeholder="Modelo" required/>
             <input id="vehicle-brand" type="text" name="brand" placeholder="Montadora" required/>
@@ -28,7 +28,7 @@
               <label for="isAvailable">Veículo disponível para locação?</label>
               <input id="isAvailable" type="checkbox" name="availability"/>
             </div>
-            <button type="submit" id="confirm-add">Adicionar veículo</button>
+            <button type="submit" id="confirm-button">Adicionar veículo</button>
           </form>
         </div>
       </div>
