--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,6 +68,7 @@ footer {
 }
 
 .container {
+    overflow: auto;
 	background: linear-gradient(#f2f2f2, #e2e2e2);
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 600px));
@@ -81,10 +82,14 @@ footer {
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 10px;
-	background: white;
+	background: lightgreen;
 	border-radius: 10px;
 	padding: 25px;
 	box-shadow: 0px 0px 5px #6c6c6c;
+}
+
+.card.unavailable {
+    background: lightcoral;
 }
 
 h2 {
@@ -169,6 +174,20 @@ input {
 	border-radius: 20px;
 }
 
+.edit {
+	background: none;
+	border: none;
+	background-image: url(./../images/editar.png);
+	background-size: cover;
+	align-self: end;
+	height: 30px;
+	width: 30px;
+}
+
+.edit:hover {
+	cursor: pointer;
+}
+
 .delete {
 	background: none;
 	border: none;
@@ -181,6 +200,12 @@ input {
 
 .delete:hover {
 	cursor: pointer;
+}
+
+.buttons-div {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 10px;
 }
 
 .vehicle-available {
