Edit footer text

--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
         </div>
       </div>
     <footer>
-        <p>Copyright © 2022 <a href="https://github.com/matheuspl92" target="_blank">matheuspl92</a></p>
+        <p>Made by <a href="https://github.com/matheuspl92" target="_blank">matheuspl92</a></p>
     </footer>
 </body>
 </html>
