--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   --color-1: hsl(4, 76%, 31%);
   --color-2: #202020;
+  --color-3: hsl(0, 0%, 20%);
 }
 
 body {
@@ -28,7 +29,7 @@ button,
 
 button:hover,
 .btn:hover {
-  background-color: hsl(0, 0%, 20%);
+  background-color: var(--color-3);
 }
 
 .page-header {
@@ -99,10 +100,10 @@ main {
 .modal {
   border: 0;
   margin: auto;
-  box-shadow: 0 0 10px hsl(0 0% 0% / .5);
-
-  background-color: var(--color-1);
   border-radius: .7em;
+  max-width: 50ch;
+  box-shadow: 0 0 10px hsl(0 0% 0% / .5);
+  background-color: var(--color-1);
   
   color: white;
   text-transform: uppercase;
@@ -119,17 +120,28 @@ main {
   padding: 1.5em;
 }
 
-.modal header p {
+.modal header details {
+  background-color: var(--color-3);
   margin-top: 1em;
-  text-transform:none;
-  max-width: 50ch;
-  background-color: hsl(0, 0%, 20%);
-  border-radius: .5em;
   padding: .5em;
+  border-radius: .5em;
+}
+
+.modal header details summary {
+  cursor: pointer;
+}
+
+.modal header details i {
+  margin-right: .5em;
+}
+
+.modal header p {
+  margin-top: .5em;
+  text-transform: none;
 }
 
 .form {
-  padding: 2em;
+  padding: 1.5em;
   max-width: 100%;
 
   display: flex;
@@ -159,10 +171,6 @@ main {
 .form select,
 .form input[type="file"] {
   cursor: pointer;
-}
-
-.form__btns {
-  margin-top: 1em;
 }
 
 .form button {
