--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,35 @@ button {
   transition: 0.4s;
 }
 .gradiant {
-  background: linear-gradient(45deg, green, yellow, blue, white);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100vw;
   height: 100vh;
-  background-size: 100% 100%;
+  color: #fff;
+  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+}
+
+@keyframes Gradient {
+  0% {
+      background-position: 0% 50%
+  }
+  50% {
+      background-position: 100% 50%
+  }
+  100% {
+      background-position: 0% 50%
+  }
 }
 button:hover {
   background-color: #07fc34;
 }
 #edit:hover {
   background-color: blue;
-}
+} 
 #remove:hover {
   background-color: crimson;
 }
