Make changes about responsivity

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -7,6 +7,9 @@ body {
   line-height: 18px;
   color: white;
   background-color: #00060F;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 h1 {
