--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -27,6 +27,24 @@ h2 {
 img {
   user-select: none;
 }
+input[type="date"] {
+  position: relative;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: auto;
+  height: auto;
+  color: transparent;
+  background: transparent;
+  cursor: pointer;
+}
+input[type="date"]::placeholder {
+  @apply text-grey
+}
 /* 
 .bg-gradient-1 {
   @apply from-light_blue to-default_blue;
