--- a/softpet/frontend/src/app/globals.css
+++ b/softpet/frontend/src/app/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: url("/backgroundTop.svg") left top no-repeat,
+    url("/backgroundBottom.svg") right bottom no-repeat;
+  background-size: auto;
+  background-color: hsl(216, 100%, 3%);
+  margin: 4%;
+}
+html {
+  height: 100%;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.w-80{
+  width: 80%;
+}
+
+.h-7{
+  height: 7%;
+}
+
+.border-3{
+  border-width: .2rem;
+}
+
+.w-100{
+  width: 100%;
+}
+.h-100{
+  height: 100%;
 }
